# dqg

./: CITATION.cff  Cargo.toml  README.md  about.toml  example.dre  index.html  licenses.html  statistics.dqg  tarpaulin-report.html
.github/workflows/: rust.yml
src/: combinatoric.rs  core.rs  debug.rs  encoding.rs  evaluate.rs  graph.rs  input.rs  main.rs  metric.rs  misc.rs  parser.rs  permutation.rs  quotient.rs  sat_solving.rs  statistics.rs  transversal.rs
src/encoding/: encoding_dict.rs  high_level.rs  low_level.rs  mod.rs
src/gap/: mod.rs  parser.rs  print.rs  search.rs
src/graph/: internal_graph.rs  mod.rs  nauty_traces_graph.rs
src/parser/: csv_parser.rs  dre_parser.rs  mod.rs  mus_parser.rs  txt_parser.rs
