[package]
name = "dqg"
version = "0.3.1"
authors = ["Florian Sextl <sextl@in.tum.de>"]
edition = "2018"

[dependencies]
nauty-Traces-sys = {git = "https://github.com/firefighterduck/nauty-Traces-sys"}
kissat-rs = {git = "https://github.com/firefighterduck/kissat-rs", branch = "main" }
libffi = "1.0.0"
custom_debug_derive = "0.5.0"
itertools = "0.10.0"
nom = "6.1.2"
thiserror = "1.0.24"
structopt = "0.3.21"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
