[package]
name = "dqg"
version = "0.10.0"
authors = ["Florian Sextl <sextl@in.tum.de>"]
edition = "2018"

[dependencies]
nauty-Traces-sys = {git = "https://github.com/firefighterduck/nauty-Traces-sys"}
kissat-rs = {git = "https://github.com/firefighterduck/kissat-rs", branch = "main" }
libffi = "1.0.1"
custom_debug_derive = "0.5.0"
itertools = "0.10.1"
nom = "6.1.2"
thiserror = "1.0.26"
structopt = "0.3.21"
num = "0.4.0"

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"
